vendor compiled assets

--- a/app/views/format_viewer/show.html.haml
+++ b/app/views/format_viewer/show.html.haml
@@ -12,19 +12,8 @@
 		.col-md-3
 			%h2= @item[:title]
 
-			.well
-				%h4 
-					This 
-					= link_to 'newspaper article', '/newspapers'
-					is in the public domain.
-
-				%p You can copy this item, share it, and post it on a blog or website. It can be modified, remixed and built upon. It can be used commercially.
-
-				%p If reproducing this item, it is helpful to include the following credit:
-
-				.well
-					[Copyright notice, credit and URL here]
-
+			= render :partial => 'shared/copyright_template'
+			
 			%h4 Would you like a copy?
 
 			= link_to 'Download PDF', '#', class: 'btn btn-default btn-block'
