--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -1,5 +1,5 @@
 - unless current_page?(root_url)
-	%nav.navbar.navbar-default.navbar-fixed-top
+	%nav.navbar.navbar-default.navbar-fixed-top.navbar-primary
 		.navbar-header
 			%button.navbar-toggle{'data-toggle' => "collapse",  'data-target' => ".navbar-collapse"}
 				%span.icon-bar
