--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -67,17 +67,21 @@ h1, h2, h3, h4, h5, h6, th {
 }
 
 h1 {
+	font-size: 2em;
 	color: darken($ppGreen, 20%);
-	padding: 0.3em 0;
-	border-bottom: 1px solid darken($ppGreen, 20%);
-	margin: 0 0 0.5em;
+	padding: 0;
+	margin: 0.5em 0;
+}
+
+h4 + h1 {
+	margin-top: 0;
 }
 
 label {
 	font-weight: inherit;
 }
 
-.navbar {
+.navbar-primary {
 	background: $ppGreen;
 	.navbar-brand {
 		color: #fff !important;
@@ -237,7 +241,7 @@ ol.breadcrumb {
 		float: left;
 		margin: 10px 10px 10px 0;
 		text-align: center;
-		max-width: 23%;
+		width: 23%;
 		height: 300px;
 		overflow: hidden;
 		p {
@@ -245,7 +249,6 @@ ol.breadcrumb {
 			margin: 0;
 		}
 		.newspaper-page-image {
-			border-radius: 10px;
 			border: 1px solid $ppGray;
 			max-width: 100%;
 			max-height: 250px;
@@ -356,6 +359,7 @@ table {
 		padding: 1em;
 	}
 	.image-pad {
+		padding: 0 0 1em 0;
 	}
 }
 
