--- a/app/views/manuscripts/_home_cols.html.haml
+++ b/app/views/manuscripts/_home_cols.html.haml
@@ -1,16 +1,15 @@
-.row
-	.col-md-6.date-column
-		%h3= link_to "By Date", "/#{@type.to_s.dasherize}/date"
+.search-box
 
-		%ul
-			- 12.times do |d|
-				- decade = (d * 10) + 1830
-				%li= link_to "#{decade}s", "/#{@type.to_s.dasherize}/date/#{decade}s"
-				
-	.col-md-6
-		%h3= link_to "By collection", "/#{@type.to_s.dasherize}/title"
+	#dates-picker.search-tool-panel.closeable
+		= render :partial => 'shared/close_widget'
+		= render :partial => 'shared/date_picker'
+	#collection-picker.search-tool-panel.closeable
 		%ul
 			- ['Manuscripts Collection', 'McLean, Donald', 'Sir Donald McLean Papers', 'Holyoake, Keith Jacka', 'Marshall, John Ross', 'Inward letters in Maori', 'Pacific Manuscripts Bureau Records of the Pacific Area', 'Hutt County Council Records', 'A H & A W Reed Ltd Records', 'New Zealand Federation of Labour Records'].each do |section|
 				%li
 					%a{:href => "/#{@type.to_s.dasherize}/collection/#{section.parameterize}"}= section
 		= link_to 'See all collections...', "/#{@type.to_s.dasherize}/collection", :class => 'btn'
+
+
+
+
