--- a/app/views/periodicals/_search_results.html.haml
+++ b/app/views/periodicals/_search_results.html.haml
@@ -2,6 +2,7 @@
 	%thead
 		%tr
 			%th Date
+			%th Publication
 			%th Title
 	%tbody
 		- @search_results['search']['results'].each do |result|
@@ -9,5 +10,8 @@
 				%td
 					%a{:href => "/#{@type}/#{result['id']}"}
 						= Date.parse(result['date'].to_a[0]).strftime("%e %B, %Y")
+				%td
+					%a{:href => "/#{@type}/#{result['id']}"}
+						= result['collection'].first
 				%td
 					%a{:href => "/#{@type}/#{result['id']}"}= result['title']
