--- a/app/views/shared/_copyright_template.html.haml
+++ b/app/views/shared/_copyright_template.html.haml
@@ -1,7 +1,5 @@
 %h4 
-	This 
-	= link_to 'newspaper article', '/newspapers'
-	is in the public domain.
+	This article is in the public domain.
 
 %p You can copy this item, share it, and post it on a blog or website. It can be modified, remixed and built upon. It can be used commercially.
 
