--- a/app/views/newspapers/page.html.haml
+++ b/app/views/newspapers/page.html.haml
@@ -1,82 +1,70 @@
-%h1
-	- unless @title.nil?
-		%span= link_to @title[:title], "/newspapers/title/#{@title[:title].parameterize}"
-	%small
-		- unless params[:year].nil?
-			»
-			%span= link_to params[:year], "/newspapers/title/#{@title[:title].parameterize}/#{params[:year]}"
-		- unless params[:month].nil?
-			»
-			%span= link_to @today.strftime('%B'), "/newspapers/title/#{@title[:title].parameterize}/#{params[:year]}/#{params[:month]}"
-		- unless params[:day].nil?
-			%span= link_to params[:day], "/newspapers/title/#{@title[:title].parameterize}/#{params[:year]}/#{params[:month]}/#{params[:day]}"
-		- unless params[:page].nil?
-
-			%span= " » Page #{params[:page]}"
-.row
-	.col-md-12
-
-		%nav.navbar.navbar-default
-			%ul.nav.navbar-nav
-				%li.active
-					%a{href: "#thumbnails", 'data-toggle' => "tab"}
-						%span.glyphicon.glyphicon-th
-						Page images
-
-				%li
-					%a{href: "#contents", 'data-toggle' => "tab"}
-						%span.glyphicon.glyphicon-list-alt
-						Outline of issue contents
-				%li
-					%a{href: "#about", 'data-toggle' => "tab"}
-						%span.glyphicon.glyphicon-question-sign
-						About this newspaper
-				%li.dropdown
-					%a.dropdown-toggle{href: "#", 'data-toggle' => "dropdown"}
-						%span.glyphicon.glyphicon-file
-						Save a copy 
-						%span.caret
-					%ul.dropdown-menu{role: "menu"}
-						%li= link_to 'Download PDF', '#'
-			%ul.nav.navbar-nav.navbar-right
-				- if @page > 1
-					%li
-						%a{href: "/newspapers/title/#{@title[:title].parameterize}/#{@today.year}/#{@today.month}/#{@today.day}/#{@page - 1}"}
-							%span.glyphicon.glyphicon-arrow-left
-							Previous page
-				- if @page < @num_pages
-					%li
-						%a{href: "/newspapers/title/#{@title[:title].parameterize}/#{@today.year}/#{@today.month}/#{@today.day}/#{@page + 1}"}
-							Next page
-							%span.glyphicon.glyphicon-arrow-right
-
-		.newspaper-pages
-
-			.tab-content
-
-				#thumbnails.tab-pane.fade.in.active
-					.page-image-detail
-						= image_tag("http://paperspast.natlib.govt.nz/cgi-bin/imageserver/imageserver.pl?oid=#{NewspaperTitle.code(@title[:title].parameterize)}#{@today.strftime('%Y%m%d')}.1.#{@page}&scale=30&color=32&ext=gif&key=")
-						- Newspaper.areas(NewspaperTitle.code(@title[:title].parameterize) + @today.strftime('%Y%m%d') + ".1.#{@page}").each do |area|
-							= link_to ' ', area[:href], :style => area[:style]
+%h1= render :partial => 'shared/breadcrumbs'
 
 
-				#contents.tab-pane.fade
+%nav.navbar.navbar-default
+	%ul.nav.navbar-nav
+		%li.page-expander
+			%a{href: '#'}
+				%span.glyphicon.glyphicon-fullscreen
+		%li.active
+			%a{href: "#thumbnails", 'data-toggle' => "tab"}
+				%span.glyphicon.glyphicon-th
+				Page image
 
-					- Newspaper.outline(NewspaperTitle.code(@title[:title].parameterize) + @today.strftime('%Y%m%d'), @page).each do |page, items|
-						%h4= page
-						%ul
-							- items.each do |item|
-								%li= link_to item[:label], item[:href]
+		%li
+			%a{href: "#contents", 'data-toggle' => "tab"}
+				%span.glyphicon.glyphicon-list-alt
+				Outline of page contents
+		%li
+			%a{href: "#about", 'data-toggle' => "tab"}
+				%span.glyphicon.glyphicon-question-sign
+				About this newspaper
+		%li.dropdown
+			%a.dropdown-toggle{href: "#", 'data-toggle' => "dropdown"}
+				%span.glyphicon.glyphicon-file
+				Save a copy 
+				%span.caret
+			%ul.dropdown-menu{role: "menu"}
+				%li= link_to 'Download PDF', '#'
+	%ul.nav.navbar-nav.navbar-right
+		- if @page > 1
+			%li
+				%a{href: "/newspapers/title/#{@item[:title].parameterize}/#{@today.year}/#{@today.month}/#{@today.day}/#{@page - 1}"}
+					%span.glyphicon.glyphicon-arrow-left
+					Previous page
+		- if @page < @num_pages
+			%li
+				%a{href: "/newspapers/title/#{@item[:title].parameterize}/#{@today.year}/#{@today.month}/#{@today.day}/#{@page + 1}"}
+					Next page
+					%span.glyphicon.glyphicon-arrow-right
 
-				#about.tab-pane.fade
+.newspaper-pages
 
-					.row
-						.col-md-6
-							%h2 About this newspaper
+	.tab-content
 
-							%p= @title[:short_desc]
+		#thumbnails.tab-pane.fade.in.active
+			.page-image-detail.page-image-detail-compressed
+				= image_tag("http://paperspast.natlib.govt.nz/cgi-bin/imageserver/imageserver.pl?oid=#{NewspaperTitle.code(@item[:title].parameterize)}#{@today.strftime('%Y%m%d')}.1.#{@page}&scale=30&color=32&ext=gif&key=")
+				- Newspaper.areas(NewspaperTitle.code(@item[:title].parameterize) + @today.strftime('%Y%m%d') + ".1.#{@page}").each do |area|
+					= link_to ' ', area[:href], :style => area[:style]
 
-							%p= link_to "Read more", "/newspapers/title/#{@title[:title].parameterize}"
+
+		#contents.tab-pane.fade
+
+			- Newspaper.outline(NewspaperTitle.code(@item[:title].parameterize) + @today.strftime('%Y%m%d'), @page).each do |page, items|
+				%h4= page
+				%ul
+					- items.each do |item|
+						%li= link_to item[:label], item[:href]
+
+		#about.tab-pane.fade
+
+			.row
+				.col-md-6
+					%h2 About this newspaper
+
+					%p= @item[:short_desc]
+
+					%p= link_to "Read more", "/newspapers/title/#{@item[:title].parameterize}"
 
 
