--- a/app/views/periodicals/_home_cols.html.haml
+++ b/app/views/periodicals/_home_cols.html.haml
@@ -1,20 +1,9 @@
-.row
-	.col-md-6.date-column
-		%h3= link_to "By Date", "/#{@type.to_s.dasherize}/date"
+.search-box
 
-		%ul
-			- 12.times do |d|
-				- decade = (d * 10) + 1830
-				%li= link_to "#{decade}s", "/#{@type.to_s.dasherize}/date/#{decade}s"
-				
-		= link_to "Looking for magazines and journals after 1945?", "#"
-	.col-md-6
-		%h3= link_to "By title", "/#{@type.to_s.dasherize}/title"
-		%ul
-			%li
-				%a{:href => "/#{@type.to_s.dasherize}/title/kai-tiaki"} Kai Tiaki: The Journal of NZ Nursing
-			%li
-				%a{:href => "/#{@type.to_s.dasherize}/title/te-ao-hou"} Te Ao Hou
-			%li
-				%a{:href => "/#{@type.to_s.dasherize}/title/te-ao-hou"} Transactions and Proceedings of the Royal Society of New Zealand
-		= link_to 'See all titles...', "/#{@type.to_s.dasherize}/title", :class => 'btn'
+	#dates-picker.search-tool-panel.closeable
+		= render :partial => 'shared/close_widget'
+		= render :partial => 'shared/date_picker'
+	#title-picker.search-tool-panel.closeable
+		= render :partial => 'shared/close_widget'
+		= render :partial => 'newspapers/region_picker'
+
